--- a/output.css
+++ b/output.css
@@ -612,12 +612,20 @@ video {
   right: -2.5rem;
 }
 
+.-top-10{
+  top: -2.5rem;
+}
+
 .bottom-0{
   bottom: 0px;
 }
 
 .left-0{
   left: 0px;
+}
+
+.left-1\/2{
+  left: 50%;
 }
 
 .left-\[-100\%\]{
@@ -628,48 +636,41 @@ video {
   left: 0;
 }
 
-.top-0{
-  top: 0px;
-}
-
-.-top-10{
-  top: -2.5rem;
-}
-
 .right-0{
   right: 0px;
 }
 
-.top-8{
-  top: 2rem;
+.top-0{
+  top: 0px;
 }
 
 .top-1\/2{
   top: 50%;
 }
 
-.left-1\/2{
-  left: 50%;
-}
-
-.top-10{
-  top: 2.5rem;
-}
-
 .top-20{
   top: 5rem;
-}
-
-.z-50{
-  z-index: 50;
 }
 
 .-z-10{
   z-index: -10;
 }
 
+.z-50{
+  z-index: 50;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
@@ -692,12 +693,16 @@ video {
   width: 8rem;
 }
 
+.w-64{
+  width: 16rem;
+}
+
 .w-full{
   width: 100%;
 }
 
-.w-64{
-  width: 16rem;
+.w-11\/12{
+  width: 91.666667%;
 }
 
 .-translate-x-1\/2{
@@ -765,8 +770,20 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-center{
@@ -793,14 +810,16 @@ video {
   gap: 2rem;
 }
 
-.gap-3{
-  gap: 0.75rem;
-}
-
 .space-y-5 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -809,6 +828,28 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-green-900{
+  --tw-border-opacity: 1;
+  border-color: rgb(20 83 45 / var(--tw-border-opacity, 1));
+}
+
+.bg-green-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
 }
 
 .bg-green-950{
@@ -820,13 +861,26 @@ video {
   background-color: rgb(5 46 22 / 0.8);
 }
 
-.bg-green-700{
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .font-Lobster{
   font-family: Lobster, sans-serif;
+}
+
+.font-Jost{
+  font-family: Jost, sans-serif;
 }
 
 .text-2xl{
@@ -839,14 +893,26 @@ video {
   line-height: 2.25rem;
 }
 
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
+.font-bold{
+  font-weight: 700;
+}
+
+.font-semibold{
+  font-weight: 600;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .text-slate-300{
@@ -859,8 +925,17 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
-.opacity-90{
-  opacity: 0.9;
+.text-green-900{
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity, 1));
+}
+
+.opacity-10{
+  opacity: 0.1;
+}
+
+.opacity-20{
+  opacity: 0.2;
 }
 
 .opacity-30{
@@ -871,25 +946,24 @@ video {
   opacity: 0.4;
 }
 
+.opacity-90{
+  opacity: 0.9;
+}
+
 .opacity-50{
   opacity: 0.5;
 }
 
-.opacity-20{
-  opacity: 0.2;
+.opacity-60{
+  opacity: 0.6;
 }
 
-.opacity-10{
-  opacity: 0.1;
+.opacity-70{
+  opacity: 0.7;
 }
 
 .blur-3xl{
   --tw-blur: blur(64px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-2xl{
-  --tw-blur: blur(40px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -982,6 +1056,11 @@ h1{
   background-color: transparent;
 }
 
+.hover\:-translate-y-1:hover{
+  --tw-translate-y: -0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:bg-yellow-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(202 138 4 / var(--tw-bg-opacity, 1));
@@ -990,6 +1069,12 @@ h1{
 .hover\:text-yellow-600:hover{
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity, 1));
+}
+
+.hover\:shadow-2xl:hover{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 340px){
@@ -1003,26 +1088,32 @@ h1{
 }
 
 @media (min-width: 540px){
+  .md\:grid{
+    display: grid;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:gap-4{
     gap: 1rem;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
 @media (min-width: 768px){
   .lg\:static{
     position: static;
-  }
-
-  .lg\:top-8{
-    top: 2rem;
-  }
-
-  .lg\:top-6{
-    top: 1.5rem;
-  }
-
-  .lg\:top-5{
-    top: 1.25rem;
   }
 
   .lg\:block{
@@ -1038,12 +1129,20 @@ h1{
     min-height: fit-content;
   }
 
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
   .lg\:w-auto{
     width: auto;
   }
 
-  .lg\:w-1\/2{
-    width: 50%;
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -1054,25 +1153,48 @@ h1{
     background-color: transparent;
   }
 
-  .lg\:pt-5{
-    padding-top: 1.25rem;
-  }
-
   .lg\:pt-10{
     padding-top: 2.5rem;
+  }
+
+  .lg\:pt-5{
+    padding-top: 1.25rem;
   }
 }
 
 @media (min-width: 1180px){
-  .xl\:top-5{
-    top: 1.25rem;
-  }
-
   .xl\:bottom-12{
     bottom: 3rem;
   }
 
+  .xl\:top-5{
+    top: 1.25rem;
+  }
+
+  .xl\:grid{
+    display: grid;
+  }
+
+  .xl\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .xl\:pt-10{
     padding-top: 2.5rem;
+  }
+
+  .xl\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .xl\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 }
