--- a/output.css
+++ b/output.css
@@ -612,8 +612,20 @@ video {
   right: -2.5rem;
 }
 
+.-right-12{
+  right: -3rem;
+}
+
 .-top-10{
   top: -2.5rem;
+}
+
+.-top-5{
+  top: -1.25rem;
+}
+
+.-top-8{
+  top: -2rem;
 }
 
 .bottom-0{
@@ -665,6 +677,14 @@ video {
   margin-right: auto;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mb-40{
+  margin-bottom: 10rem;
+}
+
 .flex{
   display: flex;
 }
@@ -689,8 +709,24 @@ video {
   min-height: 80vh;
 }
 
+.w-11\/12{
+  width: 91.666667%;
+}
+
 .w-32{
   width: 8rem;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
+.w-48{
+  width: 12rem;
+}
+
+.w-56{
+  width: 14rem;
 }
 
 .w-64{
@@ -701,8 +737,12 @@ video {
   width: 100%;
 }
 
-.w-11\/12{
-  width: 91.666667%;
+.max-w-2xl{
+  max-width: 42rem;
+}
+
+.grow{
+  flex-grow: 1;
 }
 
 .-translate-x-1\/2{
@@ -774,16 +814,8 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.flex-wrap{
-  flex-wrap: wrap;
 }
 
 .items-center{
@@ -802,6 +834,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
 .gap-5{
   gap: 1.25rem;
 }
@@ -810,16 +846,25 @@ video {
   gap: 2rem;
 }
 
-.space-y-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.gap-y-36{
+  row-gap: 9rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -830,12 +875,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded{
-  border-radius: 0.25rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .border{
@@ -852,6 +897,11 @@ video {
   background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--tw-bg-opacity, 1));
+}
+
 .bg-green-950{
   --tw-bg-opacity: 1;
   background-color: rgb(5 46 22 / var(--tw-bg-opacity, 1));
@@ -866,8 +916,27 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-yellow-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity, 1));
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-5{
   padding: 1.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-20{
@@ -875,12 +944,20 @@ video {
   padding-bottom: 5rem;
 }
 
-.font-Lobster{
-  font-family: Lobster, sans-serif;
+.pt-24{
+  padding-top: 6rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-Jost{
   font-family: Jost, sans-serif;
+}
+
+.font-Lobster{
+  font-family: Lobster, sans-serif;
 }
 
 .text-2xl{
@@ -903,16 +980,31 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
 .font-medium{
   font-weight: 500;
+}
+
+.italic{
+  font-style: italic;
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-green-900{
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity, 1));
 }
 
 .text-slate-300{
@@ -923,11 +1015,6 @@ video {
 .text-yellow-500{
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
-}
-
-.text-green-900{
-  --tw-text-opacity: 1;
-  color: rgb(20 83 45 / var(--tw-text-opacity, 1));
 }
 
 .opacity-10{
@@ -946,20 +1033,16 @@ video {
   opacity: 0.4;
 }
 
-.opacity-90{
-  opacity: 0.9;
-}
-
 .opacity-50{
   opacity: 0.5;
 }
 
-.opacity-60{
-  opacity: 0.6;
-}
-
 .opacity-70{
   opacity: 0.7;
+}
+
+.opacity-90{
+  opacity: 0.9;
 }
 
 .blur-3xl{
@@ -975,6 +1058,10 @@ video {
 
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 body{
@@ -1056,6 +1143,35 @@ h1{
   background-color: transparent;
 }
 
+.title{
+  font-family: Lobster, sans-serif;
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
+h3{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+@media (min-width: 540px){
+  h3{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 768px){
+  h3{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+.popular_card:hover img{
+  top: -2.5rem;
+}
+
 .hover\:-translate-y-1:hover{
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1082,14 +1198,18 @@ h1{
     height: 5rem;
   }
 
+  .sm\:w-2\/3{
+    width: 66.666667%;
+  }
+
   .sm\:flex-row{
     flex-direction: row;
   }
 }
 
 @media (min-width: 540px){
-  .md\:grid{
-    display: grid;
+  .md\:mb-28{
+    margin-bottom: 7rem;
   }
 
   .md\:grid-cols-2{
@@ -1116,6 +1236,10 @@ h1{
     position: static;
   }
 
+  .lg\:mb-20{
+    margin-bottom: 5rem;
+  }
+
   .lg\:block{
     display: block;
   }
@@ -1137,16 +1261,24 @@ h1{
     width: auto;
   }
 
-  .lg\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .lg\:w-full{
+    width: 100%;
   }
 
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:flex-row{
     flex-direction: row;
+  }
+
+  .lg\:flex-row-reverse{
+    flex-direction: row-reverse;
   }
 
   .lg\:bg-transparent{
@@ -1160,6 +1292,11 @@ h1{
   .lg\:pt-5{
     padding-top: 1.25rem;
   }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1180px){
@@ -1171,8 +1308,12 @@ h1{
     top: 1.25rem;
   }
 
-  .xl\:grid{
-    display: grid;
+  .xl\:w-2\/3{
+    width: 66.666667%;
+  }
+
+  .xl\:w-64{
+    width: 16rem;
   }
 
   .xl\:grid-cols-4{
@@ -1181,16 +1322,6 @@ h1{
 
   .xl\:pt-10{
     padding-top: 2.5rem;
-  }
-
-  .xl\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .xl\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .xl\:text-5xl{
