--- a/input.css
+++ b/input.css
@@ -42,3 +42,9 @@ h3{
 .swiper-pagination-bullet{
     @apply bg-green-500 w-3 h-3;
 }
+html{
+    @apply overflow-x-hidden scroll-smooth;
+}
+.active{
+    @apply text-yellow-500;
+}
